ADD_SUBDIRECTORY ( mcfx_convolver )


SET ( WITH_LIBSOXR TRUE )

IF(WITH_ZITA_CONVOLVER)
	SET ( WITH_FFTW3 TRUE )
ENDIF(WITH_ZITA_CONVOLVER)

SET(OSX_COPY_LIB libsoxr.0.1.0.dylib)

IF(WITH_ZITA_CONVOLVER)
	SET(OSX_COPY_LIB libfftw3f.3.dylib)
ENDIF(WITH_ZITA_CONVOLVER)

IF (BUILD_STANDALONE)
	ADD_SUBDIRECTORY ( mcfx_convolver_standalone )
ENDIF (BUILD_STANDALONE)